welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:5: error: value =- is not a member of Int
    x=-2*x
     ^